# prysm

./: deps.bzl
beacon-chain/blockchain/: BUILD.bazel  balance_update.go  process_block.go
beacon-chain/core/altair/: BUILD.bazel  attestation.go  block.go  epoch_precompute.go  epoch_precompute_test.go  epoch_spec.go
beacon-chain/core/blocks/: BUILD.bazel  deposit.go  withdrawals.go
beacon-chain/core/epoch/: BUILD.bazel  epoch_processing.go
beacon-chain/core/epoch/precompute/: BUILD.bazel  slashing.go
beacon-chain/core/helpers/: BUILD.bazel  rewards_penalties.go  rewards_penalties_test.go
beacon-chain/core/validators/: BUILD.bazel  validator.go
beacon-chain/state/: BUILD.bazel  interfaces.go
beacon-chain/state/state-native/: BUILD.bazel  beacon_state_mainnet.go  getters_validator.go  setters_validator.go  state_trie.go
consensus-types/balance-update/: BUILD.bazel  balance_update.go  balance_update_test.go  breakdown.go  breakdown_test.go  reason.go
testing/spectest/shared/altair/rewards/: rewards_penalties.go
testing/spectest/shared/bellatrix/rewards/: rewards_penalties.go
testing/spectest/shared/capella/rewards/: rewards_penalties.go
